<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">MiteOS Companion</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>
    <string name="action_stop">Stop</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="permission_request">The application needs location permission to search for nearby Bluetooth devices. When the application is not in use or in the background it does not use the location service</string>
    <string name="permissions_denied">Permission denied</string>
    <string name="watch_pair_header">Watch Pair</string>
    <string name="pair_new_watch">Pair Watch</string>
    <string name="pair_watch_summary">Pair your watch with the app</string>
    <string name="hass_header">Home Assistant</string>
    <string name="hass_url">Home Assistant URL</string>
    <string name="hass_url_summary">Enter your Home Assistant URL</string>
    <string name="hass_token">Home Assistant API Token</string>
    <string name="hass_token_summary">Enter your Home Assistant API Token</string>
    <string name="hass_list_manage">Manage Home Assistant Entities</string>
    <string name="hass_list_manage_summary">Add or remove Home Assistant entities</string>
    <string name="hass_list_add_dialog_title">Add New Entity</string>
    <string name="hass_list_empty">No entities added yet</string>
    <string name="hass_list_name">Entity Name</string>
    <string name="hass_list_key">Entity Key</string>
    <string name="hass_list_edit">Edit Entity</string>
    <string name="totp_header">TOTP Authentication</string>
    <string name="totp_list_manage">Manage TOTP Entries</string>
    <string name="totp_list_add_dialog_title">Add New TOTP Entry</string>
    <string name="totp_list_empty">No TOTP entries added yet</string>
    <string name="totp_list_name">Account Name</string>
    <string name="totp_list_token">Secret Token</string>
    <string name="totp_list_edit">Edit TOTP Entry</string>
    <string name="calendar_header">Calendar Sync</string>
    <string name="calendar_list_manage">Manage Calendar Sync</string>
    <string name="calendar_list_empty">No calendars available</string>
    <string name="calendar_list_title">Select Calendars to Sync</string>
    <string name="calendar_list_summary">Choose which calendars to sync with your watch</string>
    <string name="calendar_permission_required">Calendar permission is required to sync events</string>
    <string name="media_playback_header">Media Playback</string>
    <string name="dither_album_cover">Dither Album Cover</string>
    <string name="dither_album_cover_summary">Dither album cover images for better display on e-ink screens</string>
    <string name="open_weather_map">Open-Meteo</string>
    <string name="open_weather_map_static">Static Position</string>
    <string name="open_weather_map_static_summary">When this is enabled, it wont use your phones GPS for weather information</string>
    <string name="open_weather_map_city">City Name</string>
    <string name="open_weather_map_lat">Latitude</string>
    <string name="open_weather_map_long">Longitude</string>
    <string name="open_weather_map_token">API Token</string>
    <string name="open_weather_map_temp_unit">Temp Unit</string>

</resources>
