<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:title="@string/watch_pair_header">

        <Preference
            app:key="pairWatch"
            app:title="@string/pair_new_watch" />

    </PreferenceCategory>

    <PreferenceCategory 
        app:title="@string/hass_header">

        <Preference
            app:key="hassUrl"
            app:persistent="false"
            app:title="@string/hass_url"/>

        <Preference
            app:key="hass_token"
            app:persistent="false"
            app:title="@string/hass_token"/>

        <Preference
            app:key="hass_list_manage"
            app:persistent="false"
            app:title="@string/hass_list_manage"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/media_playback_header">

        <SwitchPreferenceCompat
            app:key="dither_album_cover"
            app:title="@string/dither_album_cover_title"
            app:summary="@string/dither_album_cover_summary"
            app:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>